--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -12,6 +13,17 @@
     <img src="/image/person.jpg" alt="image">
 
     </header><hr>
+
+    <section>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Experience & Education</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
 
     <h1>Professional Summary</h1>
     <p>Enthusiastic and highly motivated freelance web developer with a strong foundation in Information
@@ -75,6 +87,8 @@
     <p>Bachelor of Science in Information Technology - Software Development</p>
     <h3>Milner High School (2015 - 2019)</h3>
     <hr>
+
+</section>
 
     <footer>
         <p>
